[project]
name = "lastmile-routing-lade"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "gurobipy>=13.0.2",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
    "ortools>=9.15.6755",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "pytest>=9.1.1",
]
